Added CDN link to run tests

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
         </section>
         <p class="link-paragraph">If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://es.wikipedia.org/wiki/Homer_Simpson">Wikipedia entry</a>.</p>
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
